force-app/main/default/objects/Product2/fields/Bar_Code_Mastercarton__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code_Mastercarton__c</fullName>
    <label>Bar Code Mastercarton</label>
    <length>80</length>
    <type>Text</type>
</CustomField>