force-app/main/default/objects/Product2/fields/Content_per_Sleeve_Capsules__c.field-meta.xml
<CustomField>
    <fullName>Content_per_Sleeve_Capsules__c</fullName>
    <label>Content per Sleeve (Capsules)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>