force-app/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;/resource/productImages/&quot;&amp;ProductCode&amp;&quot;.png&quot;, ProductCode,122,450)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>