force-app/main/default/objects/Product2/fields/Image_Small__c.field-meta.xml
<CustomField>
    <fullName>Image_Small__c</fullName>
    <formula>IMAGE(&quot;/resource/productImages/&quot;&amp;ProductCode&amp;&quot;.png&quot;, ProductCode,40,150)</formula>
    <label>Image Small</label>
    <type>Text</type>
</CustomField>