force-app/main/default/objects/Product2/fields/Quantity_per_EUR_pallet_Units__c.field-meta.xml
<CustomField>
    <fullName>Quantity_per_EUR_pallet_Units__c</fullName>
    <label>Quantity per EUR-pallet (Units)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>