force-app/main/default/objects/Product2/fields/Quantity_per_Mastercarton_Units__c.field-meta.xml
<CustomField>
    <fullName>Quantity_per_Mastercarton_Units__c</fullName>
    <label>Quantity per Mastercarton (Units)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>