force-app/main/default/objects/Product2/listViews/Belmoca_Products.listView-meta.xml
<ListView>
    <fullName>Belmoca_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Image__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Quantity_per_EUR_pallet_Units__c</columns>
    <columns>Quantity_per_Mastercarton_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notEqual</operation>
        <value>Private Label</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>notContain</operation>
        <value>VCP</value>
    </filters>
    <label>Belmoca Products</label>
</ListView>